# src/main/java/be/projetSGBD/entity/VaccinEntity.java
@@ -2,8 +2,10 @@ package be.projetSGBD.entity;
 
 import java.util.Set;
 
+import javax.persistence.CascadeType;
 import javax.persistence.Column;
 import javax.persistence.Entity;
+import javax.persistence.FetchType;
 import javax.persistence.GeneratedValue;
 import javax.persistence.GenerationType;
 import javax.persistence.Id;
@@ -15,7 +17,7 @@ import javax.persistence.Table;
 import lombok.Data;
 
 @Entity
-@Table(name = "Vaccin")
+@Table(name = "VACCIN")
 @Data
 public class VaccinEntity {
 
@@ -27,8 +29,10 @@ public class VaccinEntity {
 	int nbsJoursEntreDoses;
 	int numeroLot;
 	
+
 	@ManyToOne
-	@JoinColumn(name = "idCentreVaccination")
+	@JoinColumn(name = "idCentreVaccination", nullable = false)
 	CentreVaccinationEntity centreVaccination;
+
 	
 }
